--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Home - Times of Hemp</title>
+     <title>Home - The Times of Hemp</title>
  <meta name="description" content="Times of Hemp is a leading digital media platform dedicated to educating, informing, and connecting the global hemp community." />
 
-<link rel="canonical" href="https://tohindia.github.io/timesofhemp/">
+<link rel="canonical" href="https://tohindia.github.io/">
 <meta property="og:title" content="Home - Times of Hemp">
 <meta property="og:locale" content="en" />
 <meta property="og:locale:alternate" content="en_IN" />
 <meta property="og:locale:alternate" content="en_US" />
 <meta property="og:locale:alternate" content="en_GB" />
 <meta property="og:type" content="website">
-<meta property="og:site_name" content="Times of Hemp">
+<meta property="og:site_name" content="The Times of Hemp">
 <meta name="author" content="ToH Team">
 
  <script type="application/ld+json">
@@ -59,14 +59,14 @@
     <p>Covering everything from industrial hemp applications to policy updates, Times of Hemp serves as the go-to source for businesses, researchers, and enthusiasts passionate about the future of hemp. With a commitment to education and advocacy, the platform amplifies the potential of hemp as a game-changer for industries like construction and textiles.</p>
 <h3 style="text-align: center;">Blogs</h3>
 <ol>
-<li><a href="https://tohindia.github.io/timesofhemp/7-things-everyone-should-know-about-cannabis.html">7 Things Everyone Should Know About Cannabis</a></li>
-<li><a href="https://tohindia.github.io/timesofhemp/role-and-benefits-of-cannabis-in-regenerative-agriculture.html">Role and Benefits of Cannabis in Regenerative Agriculture</a></li>
-<li><a href="https://tohindia.github.io/timesofhemp/can-cbd-replace-traditional-medications.html">Can CBD Replace Traditional Medications?</a></li>
-<li><a href="https://tohindia.github.io/timesofhemp/the-future-of-sustainable-and-eco-friendly-construction.html">The Future of Sustainable and Eco-Friendly Construction</a></li>
-<li><a href="https://tohindia.github.io/timesofhemp/hemp-protein-vs-whey-proteins.html">Hemp Protein vs. Whey Proteins: Which One is Best?</a></li>
- <li><a href="https://tohindia.github.io/timesofhemp/the-science-behind-hempcrete.html">The Science Behind Hempcrete: Why It’s the Future of Green Construction</a></li>
- <li><a href="https://tohindia.github.io/timesofhemp/hemp-seeds-and-heart-health.html">Hemp Seeds and Heart Health: How They Can Benefit You</a></li>
- <li><a href="https://tohindia.github.io/timesofhemp/how-cbd-oil-is-transforming-skincare.html">How CBD Oil is Transforming Skincare
+<li><a href="https://tohindia.github.io/7-things-everyone-should-know-about-cannabis.html">7 Things Everyone Should Know About Cannabis</a></li>
+<li><a href="https://tohindia.github.io/role-and-benefits-of-cannabis-in-regenerative-agriculture.html">Role and Benefits of Cannabis in Regenerative Agriculture</a></li>
+<li><a href="https://tohindia.github.io/can-cbd-replace-traditional-medications.html">Can CBD Replace Traditional Medications?</a></li>
+<li><a href="https://tohindia.github.io/the-future-of-sustainable-and-eco-friendly-construction.html">The Future of Sustainable and Eco-Friendly Construction</a></li>
+<li><a href="https://tohindia.github.io/hemp-protein-vs-whey-proteins.html">Hemp Protein vs. Whey Proteins: Which One is Best?</a></li>
+ <li><a href="https://tohindia.github.io/the-science-behind-hempcrete.html">The Science Behind Hempcrete: Why It’s the Future of Green Construction</a></li>
+ <li><a href="https://tohindia.github.io/hemp-seeds-and-heart-health.html">Hemp Seeds and Heart Health: How They Can Benefit You</a></li>
+ <li><a href="https://tohindia.github.io/how-cbd-oil-is-transforming-skincare.html">How CBD Oil is Transforming Skincare
 </a></li>
 </ol>
   </main>
@@ -74,7 +74,7 @@
     <footer>
         <p><strong>About Times of Hemp</strong></p>
         <p>Times of Hemp is a leading digital media platform dedicated to the global hemp industry. It provides in-depth news, research, and insights on hemp-based innovations, sustainability, and market trends.</p>
-        <p>&copy; 2025 <a href="https://tohindia.github.io/timesofhemp/">Times of Hemp</a>. All rights reserved.</p>
+        <p>&copy; 2025 <a href="https://tohindia.github.io/">Times of Hemp</a>. All rights reserved.</p>
     </footer>
 </body>
 </html>
