--- a/the-science-behind-hempcrete.html
+++ b/the-science-behind-hempcrete.html
@@ -3,16 +3,16 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
- <title>The Science Behind Hempcrete: Why It’s the Future of Green Construction — Times of Hemp</title>
+ <title>The Science Behind Hempcrete: Why It’s the Future of Green Construction — The Times of Hemp</title>
  <meta name="description" content="Hempcrete is revolutionizing sustainable architecture. Learn how its natural insulation, CO₂ absorption, and durability outperform traditional materials." />
 
-<link rel="canonical" href="https://tohindia.github.io/timesofhemp/the-science-behind-hempcrete.html">
+<link rel="canonical" href="https://tohindia.github.io/the-science-behind-hempcrete.html">
 <meta property="og:locale" content="en" />
 <meta property="og:locale:alternate" content="en_IN" />
 <meta property="og:locale:alternate" content="en_US" />
 <meta property="og:locale:alternate" content="en_GB" />
 <meta property="og:type" content="website">
-<meta property="og:site_name" content="Times of Hemp">
+<meta property="og:site_name" content="The Times of Hemp">
 <meta name="author" content="ToH Team">
 
  <script type="application/ld+json">
