--- a/the-future-of-sustainable-and-eco-friendly-construction.html
+++ b/the-future-of-sustainable-and-eco-friendly-construction.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
- <title>The Future of Sustainable and Eco-Friendly Construction — Times of Hemp</title>
+ <title>The Future of Sustainable and Eco-Friendly Construction — The Times of Hemp</title>
  <meta name="description" content="Looking for sustainable building materials? Learn how hempcrete is reshaping green construction with energy efficiency, mold resistance, and low environmental impact." />
 
 <link rel="canonical" href="https://tohindia.github.io/timesofhemp/the-future-of-sustainable-and-eco-friendly-construction.html">
@@ -12,16 +12,16 @@
 <meta property="og:locale:alternate" content="en_US" />
 <meta property="og:locale:alternate" content="en_GB" />
 <meta property="og:type" content="website">
-<meta property="og:site_name" content="Times of Hemp">
+<meta property="og:site_name" content="The Times of Hemp">
 <meta name="author" content="ToH Team">
 
  <script type="application/ld+json">
         {
             "@context": "https://schema.org/",
             "@type": "Product",
-            "name": "Times of Hemp",
-            "image": "https://tohindia.github.io/timesofhemp/timesofhemp.jpg",
-            "description": "Welcome to Times of Hemp.",
+            "name": "The Times of Hemp",
+            "image": "https://tohindia.github.io/timesofhemp.jpg",
+            "description": "Welcome to The Times of Hemp.",
             "aggregateRating": {
                 "@type": "AggregateRating",
                 "ratingValue": "4.7",
@@ -117,19 +117,19 @@
 
       <h4 style="text-align: left;">Also read:</h4>
 <ol>
-<li><a href="https://tohindia.github.io/timesofhemp/7-things-everyone-should-know-about-cannabis.html">7 Things Everyone Should Know About Cannabis</a></li>
-<li><a href="https://tohindia.github.io/timesofhemp/role-and-benefits-of-cannabis-in-regenerative-agriculture.html">Role and Benefits of Cannabis in Regenerative Agriculture</a></li>
-<li><a href="https://tohindia.github.io/timesofhemp/can-cbd-replace-traditional-medications.html">Can CBD Replace Traditional Medications?</a></li>
-<li><a href="https://tohindia.github.io/timesofhemp/hemp-protein-vs-whey-proteins.html">Hemp Protein vs. Whey Proteins: Which One is Best?</a></li>
-<li><a href="https://tohindia.github.io/timesofhemp/the-science-behind-hempcrete.html">The Science Behind Hempcrete: Why It&rsquo;s the Future of Green Construction</a></li>
-<li><a href="https://tohindia.github.io/timesofhemp/hemp-seeds-and-heart-health.html">Hemp Seeds and Heart Health: How They Can Benefit You</a></li>
-<li><a href="https://tohindia.github.io/timesofhemp/how-cbd-oil-is-transforming-skincare.html">How CBD Oil is Transforming Skincare </a></li>
+<li><a href="https://tohindia.github.io/7-things-everyone-should-know-about-cannabis.html">7 Things Everyone Should Know About Cannabis</a></li>
+<li><a href="https://tohindia.github.io/role-and-benefits-of-cannabis-in-regenerative-agriculture.html">Role and Benefits of Cannabis in Regenerative Agriculture</a></li>
+<li><a href="https://tohindia.github.io/can-cbd-replace-traditional-medications.html">Can CBD Replace Traditional Medications?</a></li>
+<li><a href="https://tohindia.github.io/hemp-protein-vs-whey-proteins.html">Hemp Protein vs. Whey Proteins: Which One is Best?</a></li>
+<li><a href="https://tohindia.github.io/the-science-behind-hempcrete.html">The Science Behind Hempcrete: Why It&rsquo;s the Future of Green Construction</a></li>
+<li><a href="https://tohindia.github.io/hemp-seeds-and-heart-health.html">Hemp Seeds and Heart Health: How They Can Benefit You</a></li>
+<li><a href="https://tohindia.github.io/how-cbd-oil-is-transforming-skincare.html">How CBD Oil is Transforming Skincare </a></li>
 </ol>
         </main>
     <footer>
         <p><strong>About Times of Hemp</strong></p>
         <p>Times of Hemp is a leading digital media platform dedicated to the global hemp industry. It provides in-depth news, research, and insights on hemp-based innovations, sustainability, and market trends.</p>
-        <p>&copy; 2025 <a href="https://tohindia.github.io/timesofhemp/">Times of Hemp</a>. All rights reserved.</p>
+        <p>&copy; 2025 <a href="https://tohindia.github.io/">Times of Hemp</a>. All rights reserved.</p>
     </footer>
 </body>
 </html>
