--- a/the-science-behind-hempcrete.html
+++ b/the-science-behind-hempcrete.html
@@ -19,9 +19,9 @@
         {
             "@context": "https://schema.org/",
             "@type": "Product",
-            "name": "Times of Hemp",
-            "image": "https://tohindia.github.io/timesofhemp/timesofhemp.jpg",
-            "description": "Welcome to Times of Hemp.",
+            "name": "The Times of Hemp",
+            "image": "https://tohindia.github.io/timesofhemp.jpg",
+            "description": "Welcome to The Times of Hemp",
             "aggregateRating": {
                 "@type": "AggregateRating",
                 "ratingValue": "4.7",
