--- a/how-cbd-oil-is-transforming-skincare.html
+++ b/how-cbd-oil-is-transforming-skincare.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>How CBD Oil is Transforming Skincare? — The Times of Hemp</title>
+<title>How CBD Oil is Transforming Skincare? — Times of Hemp</title>
  <meta name="description" content="Discover how CBD oil is revolutionizing skincare—from calming inflammation and acne to boosting hydration and radiance, naturally." />
 
 <link rel="canonical" href="https://tohindia.github.io/how-cbd-oil-is-transforming-skincare.html">
@@ -12,16 +12,16 @@
 <meta property="og:locale:alternate" content="en_US" />
 <meta property="og:locale:alternate" content="en_GB" />
 <meta property="og:type" content="website">
-<meta property="og:site_name" content="The Times of Hemp">
+<meta property="og:site_name" content="Times of Hemp">
 <meta name="author" content="ToH Team">
 
  <script type="application/ld+json">
         {
             "@context": "https://schema.org/",
             "@type": "Product",
-            "name": "The Times of Hemp",
+            "name": "Times of Hemp",
             "image": "https://tohindia.github.io/timesofhemp.jpg",
-            "description": "Welcome to The Times of Hemp.",
+            "description": "Welcome to Times of Hemp.",
             "aggregateRating": {
                 "@type": "AggregateRating",
                 "ratingValue": "4.7",
