--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     <title>Home - The Times of Hemp</title>
+     <title>Home - Times of Hemp</title>
  <meta name="description" content="Times of Hemp is a leading digital media platform dedicated to educating, informing, and connecting the global hemp community." />
 
 <link rel="canonical" href="https://tohindia.github.io/">
@@ -13,16 +13,16 @@
 <meta property="og:locale:alternate" content="en_US" />
 <meta property="og:locale:alternate" content="en_GB" />
 <meta property="og:type" content="website">
-<meta property="og:site_name" content="The Times of Hemp">
+<meta property="og:site_name" content="Times of Hemp">
 <meta name="author" content="ToH Team">
 
  <script type="application/ld+json">
         {
             "@context": "https://schema.org/",
             "@type": "Product",
-            "name": "The Times of Hemp",
+            "name": "Times of Hemp",
             "image": "https://tohindia.github.io/timesofhemp.jpg",
-            "description": "Welcome to The Times of Hemp",
+            "description": "Welcome to Times of Hemp",
             "aggregateRating": {
                 "@type": "AggregateRating",
                 "ratingValue": "4.7",
