--- a/can-cbd-replace-traditional-medications.html
+++ b/can-cbd-replace-traditional-medications.html
@@ -6,7 +6,7 @@
   <title>Can CBD Replace Traditional Medications? — Times of Hemp</title>
  <meta name="description" content="Can CBD truly replace traditional medications? Discover how this natural compound supports pain relief, anxiety, sleep, and more—without the side effects." />
 
-<link rel="canonical" href="https://tohindia.github.io/timesofhemp/can-cbd-replace-traditional-medications.html">
+<link rel="canonical" href="https://tohindia.github.io/can-cbd-replace-traditional-medications.html">
 <meta property="og:locale" content="en" />
 <meta property="og:locale:alternate" content="en_IN" />
 <meta property="og:locale:alternate" content="en_US" />
@@ -20,7 +20,7 @@
             "@context": "https://schema.org/",
             "@type": "Product",
             "name": "Times of Hemp",
-            "image": "https://tohindia.github.io/timesofhemp/timesofhemp.jpg",
+            "image": "https://tohindia.github.io/timesofhemp.jpg",
             "description": "Welcome to Times of Hemp.",
             "aggregateRating": {
                 "@type": "AggregateRating",
@@ -119,20 +119,20 @@
     <p>This article is for informational purposes only and should not be considered medical advice. Always consult a healthcare professional before starting any new treatment.</p>
 <h4 style="text-align: left;">Also read:</h4>
 <ol>
-<li><a href="https://tohindia.github.io/timesofhemp/7-things-everyone-should-know-about-cannabis.html">7 Things Everyone Should Know About Cannabis</a></li>
-<li><a href="https://tohindia.github.io/timesofhemp/role-and-benefits-of-cannabis-in-regenerative-agriculture.html">Role and Benefits of Cannabis in Regenerative Agriculture</a></li>
-<li><a href="https://tohindia.github.io/timesofhemp/the-future-of-sustainable-and-eco-friendly-construction.html">The Future of Sustainable and Eco-Friendly Construction</a></li>
-<li><a href="https://tohindia.github.io/timesofhemp/hemp-protein-vs-whey-proteins.html">Hemp Protein vs. Whey Proteins: Which One is Best?</a></li>
-<li><a href="https://tohindia.github.io/timesofhemp/the-science-behind-hempcrete.html">The Science Behind Hempcrete: Why It&rsquo;s the Future of Green Construction</a></li>
-<li><a href="https://tohindia.github.io/timesofhemp/hemp-seeds-and-heart-health.html">Hemp Seeds and Heart Health: How They Can Benefit You</a></li>
-<li><a href="https://tohindia.github.io/timesofhemp/how-cbd-oil-is-transforming-skincare.html">How CBD Oil is Transforming Skincare </a></li>
+<li><a href="https://tohindia.github.io/7-things-everyone-should-know-about-cannabis.html">7 Things Everyone Should Know About Cannabis</a></li>
+<li><a href="https://tohindia.github.io/role-and-benefits-of-cannabis-in-regenerative-agriculture.html">Role and Benefits of Cannabis in Regenerative Agriculture</a></li>
+<li><a href="https://tohindia.github.io/the-future-of-sustainable-and-eco-friendly-construction.html">The Future of Sustainable and Eco-Friendly Construction</a></li>
+<li><a href="https://tohindia.github.io/hemp-protein-vs-whey-proteins.html">Hemp Protein vs. Whey Proteins: Which One is Best?</a></li>
+<li><a href="https://tohindia.github.io/the-science-behind-hempcrete.html">The Science Behind Hempcrete: Why It&rsquo;s the Future of Green Construction</a></li>
+<li><a href="https://tohindia.github.io/hemp-seeds-and-heart-health.html">Hemp Seeds and Heart Health: How They Can Benefit You</a></li>
+<li><a href="https://tohindia.github.io/how-cbd-oil-is-transforming-skincare.html">How CBD Oil is Transforming Skincare </a></li>
 </ol>
    </main>
 
     <footer>
         <p><strong>About Times of Hemp</strong></p>
         <p>Times of Hemp is a leading digital media platform dedicated to the global hemp industry. It provides in-depth news, research, and insights on hemp-based innovations, sustainability, and market trends.</p>
-        <p>&copy; 2025 <a href="https://tohindia.github.io/timesofhemp/">Times of Hemp</a>. All rights reserved.</p>
+        <p>&copy; 2025 <a href="https://tohindia.github.io/">Times of Hemp</a>. All rights reserved.</p>
     </footer>
 </body>
 </html>
